need option default-terminal screen-256color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ set-option -g prefix C-t
 # unbind-key C-b
 # bind-key C-t send-prefix
 
+set-option -g default-terminal screen-256color
+
 # scroll => C-[ で操作できるから無くてもいいかな
 set-window-option -g mode-mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
