add option reattach-to-user-namespace -l zsh, change status pane color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ set-option -g prefix C-t
 
 set-option -g default-terminal screen-256color
 
+# Macのtmux内で clipboard+=unnamed な Vim でヤンク・コピーをすると E353: Nothing in register * というエラーが出る。
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # scroll => C-[ で操作できるから無くてもいいかな
 set-window-option -g mode-mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -41,6 +44,8 @@ bind -t vi-copy y copy-selection
 # bind Space choose-buffer
 
 # status
+set -g status-fg black
+set -g status-bg white
 # set -g status-left-length 30
 # set -g status-left '#[fg=white,bg=black]#H#[fg=white]:#[fg=white][#S#[fg=white]][#[default]'
 # set -g status-right '#[fg=black,bg=cyan,bold] [%Y-%m-%d(%a) %H:%M]#[default]'
@@ -51,8 +56,9 @@ setw -g window-status-current-bg magenta
 # setw -g window-status-current-attr bold#,underscore
 
 # pane-active-border
-set -g pane-active-border-fg black
-set -g pane-active-border-bg magenta
+set -g pane-active-border-fg white
+set -g pane-active-border-bg white
+# set -g pane-active-border-bg black
 
 bind C-r source-file ~/.tmux.conf
 
