--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ bind -t vi-copy y copy-selection
 # bind p paste-buffer
 
 
-# setw -g mode-keys vi
+setw -g mode-keys vi
 
 # buffer
 # bind Space choose-buffer
