--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 # prefix
-set-option -g prefix C-t
+# C-t is used by ctags
+set-option -g prefix C-j
+# set-option -g prefix C-t
 # unbind-key C-b
 # bind-key C-t send-prefix
 
