--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set-option -g prefix C-j
 set-option -g default-terminal screen-256color
 
 # Macのtmux内で clipboard+=unnamed な Vim でヤンク・コピーをすると E353: Nothing in register * というエラーが出る。
-# ubuntu ではコメントアウトしないと動かない
+# CentOS, ubuntu ではコメントアウトしないと動かない
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # scroll => C-[ で操作できるから無くてもいいかな
