add display (Copy mode) but not used

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # Mac Terminal の場合は MouseTerm をインストール
 # https://bitheap.org/mouseterm/
 
+# display (Copy mode)
+# bind [ copy-mode \; display "(Copy mode)"
+
 # pain split
 bind C-s split-window -v
 # pain vsplit
