bind C-m split-window -v exec man

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # display (Copy mode)
 # bind [ copy-mode \; display "(Copy mode)"
 
+# sprit window -v exec man
+bind C-m command-prompt -p "man:" "split-window -v 'exec man %%'"
+
 # pain split
 bind C-s split-window -v
 # pain vsplit
