--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,8 @@ set-option -g default-terminal screen-256color
 
 # Macのtmux内で clipboard+=unnamed な Vim でヤンク・コピーをすると E353: Nothing in register * というエラーが出る。
 # CentOS, ubuntu ではコメントアウトしないと動かない
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 # scroll => C-[ で操作できるから無くてもいいかな
 set-window-option -g mode-mouse on
